[package]
name = "uboot-nand-dump"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wuwbobo2021/uboot-nand-dump"
readme = "README.md"
description = "Dumps NAND flash image via U-Boot serial interface."
keywords = ["u-boot", "flash", "firmware", "backup"]
categories = ["command-line-utilities"]

[dependencies]
serialport = "4.9.0"
getrandom = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
postcard = { version = "1.1.3", features = ["use-std"], optional = true }
clap = { version = "4.6.0", features = ["derive"], optional = true }
indicatif = { version = "0.18", optional = true }
crc = "3.4.0"

[features]
default = ["bin-deps"]
bin-deps = ["dep:postcard", "dep:serde_json", "dep:clap", "dep:indicatif"]

[lib]
name = "uboot_nand_dump"
path = "lib.rs"

[[bin]]
name = "uboot-nand-dump"
path = "main.rs"
required-features = ["bin-deps"]
